--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="React Quiz App"
-      content="React Quiz App Created by DS Develops. Check out https://www.dsdevelops.com"
+      content="React Quiz App Created by DS Develops. Be sure to check out https://www.dsdevelops.com."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React Quiz App</title>
